--- a/demo/src/main/resources/application.yml
+++ b/demo/src/main/resources/application.yml
@@ -9,7 +9,7 @@ spring:
         dialect: org.hibernate.dialect.PostgresPlusDialect
         show-sql: true
     hibernate:
-      ddl-auto: create
+      ddl-auto: none
     open-in-view: false
   jackson:
     serialization:
@@ -24,6 +24,9 @@ spring:
   mvc:
     pathmatch:
       matching-strategy: ant_path_matcher
+  docker:
+    compose:
+      enabled: false
 
 server:
   tomcat:
@@ -45,9 +48,10 @@ management:
       exposure:
         include: health,prometheus
   metrics:
-    export:
-      prometheus:
-        enabled: true
     distribution:
       percentiles-histogram:
         "[http.server.requests]": true
+  prometheus:
+    metrics:
+      export:
+        enabled: true
